# ovs-eggtart-voice

./: .gitignore  .gitmodules  Dockerfile.rpi  LICENSE  ORIGINAL.md  README.md  run_tests.sh
.github/workflows/: ci.yml
agent/: HANDOFF.md
agent/openvoicestream_agent/: app_base.py  app_mode.py  audio_io.py  config.py  plugin.py  session.py  slv_client.py
agent/tests/: test_asr_watchdog.py  test_bargein_discard_latch.py  test_dashboard_api.py  test_dashboard_translator_api.py  test_dashboard_typed_errors.py  test_dashboard_v2.py  test_dialogue_app.py  test_dispatch_concurrency.py  test_interpreter_nllb.py  test_interpreter_translation_event.py  test_llm_backend_warmup.py  test_llm_backend_warmup_failure.py  test_llm_failure_broadcast.py  test_llm_stream_events.py  test_llm_timeout.py  test_llm_unavailable_fail_fast.py  test_low_signal_filter.py  test_modes.py  test_parallel_dispatch_lock.py  test_pipeline_modes.py  test_send_audio_nonblocking.py  test_session_tools.py  test_session_trim_all_tool_history.py  test_session_trim_budget.py  test_slv_client.py  test_state_machine.py  test_stop_intent.py  test_tools_registry.py  test_tools_runner.py  test_trim_budget_validation_error.py  test_vad.py
app/: main.py  requirements.txt  tts_backend.py
app/backends/: matcha_trt.py  paraformer_trt.py  trt_edge_llm_ipc.py  trt_edge_llm_tts.py
app/core/: api_auth.py  asr_backend.py  asr_session_manager.py  backend_manager.py  capability_resolver.py  concurrency_capability.py  coordinator.py  gpu_watchdog.py  logging_config.py  metrics.py  model_downloader.py  profile_loader.py  profile_selector.py  qwen3_artifact_downloader.py  session_limiter.py  tts_backend.py  tts_service.py  tts_speakers.py  v2v.py  vad.py  worker_io.py
app/tests/: test_asr_session_manager.py  test_backend_manager.py  test_backend_unload.py  test_capability_resolver.py  test_concurrency_capability.py  test_coordinator.py  test_cuda_memory_pool_arena.py  test_customvoice_capability.py  test_jetson_backends_env_fresh.py  test_kokoro_ort_io_cache.py  test_kokoro_sync_optimization.py  test_kokoro_trt.py  test_kokoro_trt_padding.py  test_kokoro_trt_unload.py  test_main_hot_swap.py  test_matcha_trt_padding.py  test_matcha_trt_unload.py  test_model_downloader_routing.py  test_profile_loader.py  test_session_limiter.py  test_sherpa_stream.py  test_trt_edge_llm_asr.py  test_trt_edge_llm_asr_workerio.py  test_trt_edge_llm_ipc_paths.py  test_trt_edge_llm_tts.py  test_trt_edge_llm_tts_env.py  test_v2v_asr_concurrency.py  test_v2v_endpoint_gen_race.py  test_v2v_eos_multi_utterance.py  test_v2v_low_latency_tts_buffer.py  test_v2v_vad_event.py  test_worker_io.py
bench/: rpi_bench.py
bench/parity/: run_parity.py
bench/perf/: README.md  client.py  clone_bench.py  cold_start.py  load_2client_tts.py  memory.py  multi_sentence_pipeline.py  noise.py  perf.py  run_on_device.sh  runners.py  smoke_moss_tts_backend.py  smoke_tts_multiturn.py  stability.py  stability_kokoro_n2.py  stability_matcha_n2.py  stability_tts_n2_common.py  stats.py  stress_cancel_n1.py  stress_moss_tts_n2.py
configs/profiles/: jetson-kokoro-trt-long.json  jetson-kokoro-trt-perf.json  jetson-kokoro-trt-quality.json  jetson-kokoro-trt.json  jetson-moss-tts-nano-trt.json  jetson-moss-tts-nano.json  jetson-multilang-highperf-nx.json  jetson-multilang-highperf.json  jetson-multilang-official.json  jetson-qwen3asr-matcha-nx.json  jetson-qwen3asr-matcha.json  jetson-zh-en.json  rk3576-default.json  rk3576-multilang.json  rk3576-paraformer-matcha.json  rk3588-default.json  rk3588-kokoro-rknn-34pct.json  rk3588-kokoro-rknn.json  rk3588-multilang.json  rk3588-paraformer-matcha.json  rpi4-default.json  rpi5-default.json
deploy/: docker-compose.radxa.yml  docker-compose.rk.yml  docker-compose.rpi.yml  docker-compose.yml  install.sh  jetson-release-highperf.sh
deploy/artifacts/: MANIFEST.md  qwen3_manifest.json  rk_manifest.json
deploy/docker/: Dockerfile.jetson  Dockerfile.jetson.tts-phase-b-overlay  Dockerfile.rk  Dockerfile.rpi  entrypoint.jetson.sh
docs/: perf-test-runbook.md  performance-comparison.html  performance-comparison.md  productization-status.md
docs/agent/: tool-usage.md
docs/api/: v2v-stream.md
docs/benchmarks/: p1-nano-final-2026-04-28.md  qwen3-streaming-gap-2026-05-08.md
docs/contracts/: qwen3-tts-correctness-contract.md
docs/design/: moss-tts-nano-n2-design.md
docs/performance/: qwen3-orin-profiles-2026-05-10.md
docs/plans/: edgellm-qwen3-tts-streaming-pr-design-2026-05-03.md  handover-2026-05-02.md  handover-2026-05-03.md  matcha-trt-m2-spec-2026-04-28.md  nano-dual-resident-low-latency-2026-05-08.md  paraformer-cer-optimization-2026-04-28.md  qwen3-tts-true-w8a16-eval-2026-05-09.md
docs/playbooks/: tts-model-edge-port-playbook.md
docs/postmortems/: moss-tts-nano-trt-port-postmortem.md
docs/runbooks/: kokoro-rk-deploy.md  moss-tts-nano-deployment.md  tts-phase-b-deployment.md
native/edgellm_voice_worker/: CMakeLists.txt  README.md  qwen3_asr_worker.cpp  qwen3_tts_worker.cpp
scripts/: build_asr_decoder_engine.sh  build_customvoice_jetson_binary.sh  build_kokoro_split_generator_trt.sh  build_moss_tts_engines.sh  build_rkllm_model.py  convert_model.sh  fetch_customvoice_jetson_artifacts.sh  fix_moss_codec_onnx_if_rank.py  parity_gate.sh  qwen3_tts_multilingual_prune_corpus.txt  run_qwen3_tts_worker_smoke.py  setup_and_convert.sh  setup_rkllm.sh  setup_trt_export_env.sh  validate_qwen3_tts_quality_gate.py  verify_customvoice_tts_radxa_asr.sh
services/translator/: .gitignore  BUILD.md  Dockerfile  Dockerfile.slim  pyproject.toml  server.py
tests/: dump_ort_encoder.py  paraformer_trt_stream_bench.py  test_api_auth.py  test_asr_cancel_and_finalize.py  test_gpu_watchdog.py  test_gpu_watchdog_real.py  test_json_logging.py  test_livez_readyz.py  test_metrics.py  test_metrics_prometheus.py  test_p1_encoder_parity.py  test_parity_remote_data_incomplete.py  test_session_limiter.py  test_slot_leak_endpoints.py  test_stability_gate_backend_mismatch.py  test_tts_stream_executor_resolve.py  test_v2v_bargein_latency.py
(+119 files in other folders)
