[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nllb-translator-service"
version = "1.0.0"
description = "FastAPI service for NLLB-200 translation via CTranslate2"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "ctranslate2>=3.24",
    "sentencepiece>=0.1.99",
    "pydantic>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["translator"]
